# db-query-profiler

./: .pre-commit-config.yaml  .sourcery.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: application-tests.yaml  python-publish.yml  tests.yaml
db_query_profiler/: __init__.py  query_timer.py
tests/: conftest.py  test__query_timer.py
tests/end-to-end/: end_to_end.py
tests/unit/: test__query_timer.py
