[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "db_query_profiler"
version = "0.0.7"
description = "Lightweight database query profiler."
authors = [{name = "Bilbottom"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tqdm>=4.0.0",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]


[tool.setuptools.packages.find]
include = ["db_query_profiler"]


[tool.pytest.ini_options]
addopts = "--cov=db_query_profiler --cov-report=term-missing --cov-fail-under=70"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"*.py" = [
    "UP006",  #  Use `list` instead of `List` for type annotation  -- can't lint this until py310?
    "UP035",  #  `typing.List` is deprecated, use `list` instead   -- can't lint this until py310?
]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments in function definition
]
